<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="package_name">uk.co.ergodicity.timedtoggles</string>
    <string name="app_name">Timed Toggles</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_airplane">Airplane</string>
    <string name="short_day_sunday">Sun</string>
    <string name="short_day_monday">Mon</string>
    <string name="short_day_tuesday">Tue</string>
    <string name="short_day_wednesday">Wed</string>
    <string name="short_day_thursday">Thu</string>
    <string name="short_day_friday">Fri</string>
    <string name="short_day_saturday">Sat</string>
    <string name="title_activity_edit_task">Edit task</string>
    <string name="title_confirm_delete">Delete tasks?</string>
    <string name="title_confirm_single_delete">Delete this task?</string>
    <string name="body_confirm_delete">Are you sure you want to delete the selected tasks?</string>
    <string name="body_confirm_single_delete">Are you sure you want to delete this task?</string>
    <string name="title_confirm_aeroplane_mode">On a flight?</string>
    <string name="body_confirm_aeroplane_mode">Sets airplane mode to on and disables any airplane tasks to prevent accidental turn on when in flight. Press again when flight is over.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="label_last_run">Last run</string>
    <string name="label_time_to_run">Time to run</string>
    <string name="label_days_to_run">Days to run task</string>
    <string name="label_task_to_run">Task to run</string>
    <string name="label_vibrate_on_task_run">Vibrate when task is run</string>
    <string name="label_toast_on_task_run">Show pop-up alert</string>
    <string name="label_wakelock_longer">Allow extra time to toggle</string>
    <string name="label_immediate_flightmode">No confirmation</string>
    <string name="label_theme_use_dark">Use dark theme</string>
    <string name="summary_theme_use_dark">Check this option to switch to a dark theme</string>
    <string name="label_rooted">Device is rooted</string>
    <string name="summary_rooted">Check this if this device is rooted, this enables toggles that requires a rooted device.</string>
    <string name="summary_wakelock_longer">Check this option if some toggles are not reliable or only toggle when you next turn on your phone</string>
    <string name="summary_toast_on_task_run">A pop-up alert is briefly shown if the phone is on when a task is run</string>
    <string name="summary_vibrate_on_task_run">Lets you know tasks are being run by vibrating your device</string>
    <string name="summary_immediate_flightmode">Immediate airplane toggle will not ask for confirmation</string>
    <string name="action_new">New task</string>
    <string name="action_new_condensed">New</string>
    <string name="action_aeroplane_mode">Airplane mode</string>
    <string name="action_delete_task">Delete task</string>
    <string name="action_play_task">Enable the selected tasks</string>
    <string name="action_pause_task">Pause the selected tasks</string>
    <string name="label_task_paused">Task is paused</string>
    <string name="label_placeholder">Placeholder</string>
    <string name="toast_processing">Timed Toggles now processing scheduled tasks.</string>
    <string name="toast_tasks_deleted">Selected tasks deleted.</string>
    <string name="toast_task_deleted">The task has been deleted.</string>
    <string name="label_set_the_task">Set the task</string>
    <string name="label_set_time">Set time</string>
    <string name="label_to_unpause">"Currently this is paused and will not toggle the task. To resume click the 'Play' icon."</string>
    <string name="label_days_run_dialog">Days on which to run</string>
    <string name="toast_tasks_reenabled">Airplane tasks are now enabled and airplane mode if on, is now turned off.</string>
    <string name="toast_incomplete_task">The new task requires one or more settings to be completed.</string>
    <string name="task_not_run">Not yet run</string>
    <string name="task_run_display_format">{0} at {1}</string>
    <string name="pref_no_alert_set">None</string>
    <string name="pref_alert_unknown">Unknown</string>
    <string name="label_task_postponed">Task has been postponed</string>
    <string name="label_postponed_info">"This task has been postponed as the device is in use. When the device is no longer in use, and if this task has not been superceded, it will run. If you do not wish to postpone tasks when the device is in use, uncheck the 'Postpone if in use' option in the settings menu."</string>
    <string name="dialog_title_upgraded">Upgraded to new version</string>
    <string name="dialog_message_upgraded">"What's new: Fixes to support Android 5.0 Bluetooth, Data and Airplane toggles. 

Timed Toggles has been upgraded which may have stopped timed toggles from working.

Now the application has been launched toggles have been reset to work with this new version. If applicable re-grant root permissions.

Always run Timed Toggles at least once when it is upgraded in the future."</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_title_welcome">Welcome to Timed Toggles</string>
    <string name="dialog_message_welcome">"Welcome to Timed Toggles. If this device is rooted, please go to 'Settings' and tick the Rooted Device option and grant full permissions in order to enable more toggles. To get started click the + icon to add your first timed toggle.

Please note the airplane toggling only works on rooted devices if running Android 4.2 or newer due to a Google restriction.

Sometimes Timed Toggles will be upgraded via the Play Store, if you are alerted that the app has been upgraded please run it at least once to ensure the upgrade is completed and if applicable re-apply root permissions."</string>
    <string name="dialog_title_about">About Timed Toggles</string>
    <string name="dialog_message_about">Timed Toggles version %VERSION%</string>
    <string name="dialog_title_restored">Settings restored</string>
    <string name="dialog_message_restored">Previous settings have been restored automatically from this devices backup.</string>
    <string name="label_settings">Settings</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_playsound">Play sound when task is run</string>
    <string name="summary_postpone">If the device is in use (in a call or screen is on), tasks that toggle things off are postponed to avoid interruption.</string>
    <string name="label_postpone">Postpone if in use</string>
    <string name="label_flightmode_kitkat">Compatibility mode</string>
    <string name="summary_flightmode_kitkat">Some devices running Android 5.0 may require this setting. Try this option if airplane switching does not work.</string>
</resources>
