<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/action_new"
        android:icon="@drawable/content_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"
        android:titleCondensed="@string/action_new_condensed" />
    <item
        android:id="@id/action_aeroplane_mode"
        android:icon="@drawable/alerts_and_states_airplane_mode_off"
        android:orderInCategory="110"
        android:showAsAction="ifRoom"
        android:title="@string/action_aeroplane_mode" />
    <item
        android:id="@id/action_delete"
        android:icon="@drawable/content_discard"
        android:orderInCategory="120"
        android:showAsAction="always"
        android:title="@string/action_delete_task"
        android:visible="false" />
    <item
        android:id="@id/action_pause"
        android:icon="@drawable/av_pause"
        android:orderInCategory="140"
        android:showAsAction="always"
        android:title="@string/action_pause_task"
        android:visible="false" />
    <item
        android:id="@id/action_play"
        android:icon="@drawable/av_play"
        android:orderInCategory="130"
        android:showAsAction="always"
        android:title="@string/action_play_task"
        android:visible="false" />
    <item
        android:id="@id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@id/action_about"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>