<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddEditTaskActivity">

    <app:item
        android:id="@id/action_edit_delete"
        android:icon="@drawable/content_discard"
        android:orderInCategory="120"
        app:showAsAction="always"
        android:title="@string/action_delete_task"
        android:visible="true" />
    <item
        android:id="@id/action_edit_pause"
        android:icon="@drawable/av_pause"
        android:orderInCategory="140"
        app:showAsAction="always"
        android:title="@string/action_pause_task"
        android:visible="true" />
    <item
        android:id="@id/action_edit_play"
        android:icon="@drawable/av_play"
        android:orderInCategory="130"
        app:showAsAction="always"
        android:title="@string/action_play_task"
        android:visible="false" />
    <item
        android:id="@id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@id/action_about"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/action_about" />
</menu>