<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/layoutActivityEdit"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@id/layoutTask"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10.0dip">

            <TextView
                android:id="@id/textTitleTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_to_run"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/textSelectedTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_placeholder"
                android:textSize="15.0sp" />

            <SeekBar
                android:id="@id/seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:id="@id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@id/layoutTask"
            android:layout_marginBottom="4.0dip"
            android:background="#ffcccccc" />

        <RelativeLayout
            android:id="@id/layoutDays"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:orientation="vertical"
            android:paddingBottom="10.0dip">

            <TextView
                android:id="@id/textTitleDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_days_to_run"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/day_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textTitleDays"
                android:layout_below="@id/textTitleDays"
                android:paddingRight="2.0dip"
                android:tag="day_1"
                android:text="@string/short_day_sunday"
                android:textSize="15.0sp" />

            <TextView
                android:id="@id/day_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitleDays"
                android:layout_toRightOf="@id/day_1"
                android:paddingRight="2.0dip"
                android:tag="day_2"
                android:text="@string/short_day_monday"
                android:textSize="15.0sp" />

            <TextView
                android:id="@id/day_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitleDays"
                android:layout_toRightOf="@id/day_2"
                android:paddingRight="2.0dip"
                android:tag="day_3"
                android:text="@string/short_day_tuesday"
                android:textSize="15.0sp" />

            <TextView
                android:id="@id/day_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitleDays"
                android:layout_toRightOf="@id/day_3"
                android:paddingRight="2.0dip"
                android:tag="day_4"
                android:text="@string/short_day_wednesday"
                android:textSize="15.0sp" />

            <TextView
                android:id="@id/day_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitleDays"
                android:layout_toRightOf="@id/day_4"
                android:paddingRight="2.0dip"
                android:tag="day_5"
                android:text="@string/short_day_thursday"
                android:textSize="15.0sp" />

            <TextView
                android:id="@id/day_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitleDays"
                android:layout_toRightOf="@id/day_5"
                android:paddingRight="2.0dip"
                android:tag="day_6"
                android:text="@string/short_day_friday"
                android:textSize="15.0sp" />

            <TextView
                android:id="@id/day_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitleDays"
                android:layout_toRightOf="@id/day_6"
                android:tag="day_7"
                android:text="@string/short_day_saturday"
                android:textSize="15.0sp" />
        </RelativeLayout>

        <View
            android:id="@id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@id/layoutDays"
            android:layout_marginBottom="4.0dip"
            android:background="#ffcccccc" />

        <LinearLayout
            android:id="@id/layoutTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:orientation="vertical"
            android:paddingBottom="10.0dip">

            <TextView
                android:id="@id/textTitleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_time_to_run"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_placeholder"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/layoutLastRun"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTime"
            android:layout_marginTop="10.0dip"
            android:background="#ff33b5e5"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="5.0dip">

            <TextView
                android:id="@id/label_last_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_last_run"
                android:textSize="15.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/last_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_placeholder"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/layoutPaused"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTime"
            android:layout_marginTop="10.0dip"
            android:background="#ffffbb33"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="5.0dip">

            <TextView
                android:id="@id/label_task_paused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_paused"
                android:textSize="15.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/task_paused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_to_unpause"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/layoutPostponed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTime"
            android:layout_marginTop="10.0dip"
            android:background="#ffff7777"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="5.0dip">

            <TextView
                android:id="@id/label_task_postponed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_postponed"
                android:textSize="15.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/task_postponed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postponed_info"
                android:textSize="15.0sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>